# drake

./: .gitmodules  CMakeLists.txt  testmp.py
bindings/pydrake/: math_py.cc
bindings/pydrake/multibody/: rigid_body_plant_py.cc  rigid_body_tree_py.cc
drake/: CMakeLists.txt
drake/bindings/pybind11/: CMakeLists.txt  pydrake_autodiffutils.cc  pydrake_ik.cc  pydrake_lcm.cc  pydrake_systems.cc  pydrake_trajectories.cc
drake/bindings/python/: CMakeLists.txt
drake/bindings/swig/: CMakeLists.txt  mathematicalprogram.i
drake/common/: eigen_autodiff_types.h  polynomial.h  symbolic_variable.h
drake/examples/Atlas/: runAtlasGravityCompensation.m
drake/examples/OptimizationDemos/: ContactForceProblem.m  ContactForceProblem2D.m
drake/examples/Pendulum/: CMakeLists.txt  pendulum_run_swing_up_milp.cc
drake/examples/mixed_integer_test/: CMakeLists.txt  mixed_integer_demo.cc
drake/matlab/solvers/: MixedIntegerConvexProgram.m  MixedIntegerFootstepPlanningProblem.m
drake/multibody/: rigid_body_tree.h
drake/multibody/constraint/: rigid_body_constraint.h
drake/multibody/joints/: drake_joint.h  quaternion_floating_joint.h
drake/multibody/rigid_body_plant/: drake_visualizer.h
drake/solvers/: decision_variable.h  mathematical_program.h
drake/systems/controllers/: InstantaneousQPController.cpp
drake/systems/plants/: BotVisualizer.h  BotVisualizer.m  RigidBodyBox.m  RigidBodyCapsule.m  RigidBodyCylinder.m  RigidBodyGeometry.m  RigidBodyHeightMapTerrain.m  RigidBodyMesh.m  RigidBodyMeshPoints.m  RigidBodySphere.m
drake/systems/robotInterfaces/: QPLocomotionPlan.cpp
examples/Atlas/: Atlas.m  runAtlasBalancing.m  runAtlasHandControl.m  runAtlasJumping.m  runAtlasRunning.m  runAtlasWalking.m  runAtlasWalkingSplit.m
examples/Atlas/+atlasControllers/: BodyMotionControlBlock.m  (+2 more)
examples/humanoid_controller/: BUILD.bazel
examples/qp_inverse_dynamics/: BUILD.bazel
solvers/: MixedIntegerConvexProgram.m  gurobi_solver.cc  gurobi_solver.h  ipopt_solver.cc
solvers/test/: constraint_test.cc
systems/controllers/: CMakeLists.txt  QPCommon.cpp  QPCommon.h  constructQPDataPointerMex.cpp  controlUtil.cpp  controlUtil.h
systems/plants/: Quadruped.m  RigidBodyManipulator.cpp  RigidBodyManipulator.h  TimeSteppingRigidBodyManipulator.m  URDFRigidBodyManipulator.cpp
systems/robotInterfaces/: BodyMotionData.m  BodyMotionDataList.m  ContactRegion.m  DynamicFootstepPlan.m  FootstepPlanningProblem.m  GaitedFootstepPlanningSolution.m  NonGaitedFootstepPlanningProblem.m  QPLocomotionPlan.h  QPLocomotionPlan.m  QPLocomotionPlanSettings.m  SimpleGaitVisualizer.m
util/: drakeUtil.cpp  drakeUtil.h  qpSpline.m
(+64 files in other folders)
